deprecate(collections): mark the plain Lists/Maps/Sets factories for removal
Twenty methods, all one-line wrappers over a JDK constructor, deprecated for
removal in TestNG 8 with a javadoc line naming the replacement. Nothing inside
TestNG calls them any more.

The annotation goes on the methods, not on the types: Lists, Maps and Sets keep
members that have no JDK equivalent -- merge, intersection, the multimap
factories -- and grouping utilities by their target collection is a convention
worth keeping. Objects, CollectionUtils and the multimaps are untouched for the
same reason, and org.testng.util.Strings is a different package altogether.

Because only the replaceable methods are annotated, the build produces no new
deprecation warnings and needs no @SuppressWarnings anywhere. The factories'
own bodies stop calling each other for that reason.

InlineMeSuggester is disabled for this module: acting on it means @InlineMe,
which would drag error_prone_annotations into the published pom.